--- a/project_1/my_finance/configuration/config.json
+++ b/project_1/my_finance/configuration/config.json
@@ -2,6 +2,6 @@
   "number_of_items_per_page": 3,
   "database": {
     "type": "file",
-    "path": "database/database.txt"
+    "path": "my_finance/database/database.txt"
   }
 }
